--- a/Sample/FCViewSample/FCViewSample/FCViewSample/MainPage.xaml
+++ b/Sample/FCViewSample/FCViewSample/FCViewSample/MainPage.xaml
@@ -2,15 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FCViewSample"
-             x:Class="FCViewSample.MainPage">
+             xmlns:fastCollection="clr-namespace:Binwell.Controls.FastCollectionView.FastCollection;assembly=Binwell.Controls.FastCollectionView"
+             x:Class="FCViewSample.MainPage" Title="Fast Collestion View Sample">
 
-    <StackLayout x:Name="_mainLayout">
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Fast collection view sample app!" 
-           HorizontalOptions="Center"
-               Margin="16,32,16,16"
-               />
-        <Button HorizontalOptions="FillAndExpand" Text="Sample 1" Clicked="GoToSample1" Margin="16"/>
-    </StackLayout>
+    <fastCollection:FastCollectionView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" IsPullToRefreshEnabled="True" x:Name="collectionView"/>
+   
 
 </ContentPage>
